crates/plotnik-tests/tests/02-parser/recovery_incomplete/missing_type_name.txt
Q = (identifier) @name ::
------------------ DIAGNOSTICS -------------------
error: expected a capture type after `::`
 --> query.ptk:1:26
  |
1 | Q = (identifier) @name ::
  |                          ^
  |
help: write `text`, `bool`, or a PascalCase result type after `::`
